compiler/tests/fixtures/invalid/semantics/reaction_queues_undefined_action_selector.viv
// Invalid: reaction queues undefined action selector

action trigger:
    roles:
        @actor:
            as: initiator
    reactions:
        queue action-selector nonexistent:
            with none:
